--- a/src/app/customer-list-ngfor/customer-list-ngfor.component.html
+++ b/src/app/customer-list-ngfor/customer-list-ngfor.component.html
@@ -8,7 +8,7 @@
             <th>Address</th>
             <th>Gender</th>
             <th>Department</th>
-            <th>Skills 3</th>
+            <th>Skills</th>
         </tr>
     </thead>
     <tbody>
