--- a/src/app/customer-list/customer-list.component.html
+++ b/src/app/customer-list/customer-list.component.html
@@ -64,7 +64,7 @@
         </ng-container>
 
         <ng-container matColumnDef="skills">
-            <th mat-header-cell *matHeaderCellDef> Skills </th>
+            <th mat-header-cell *matHeaderCellDef> Skills 3</th>
             <td mat-cell *matCellDef="let element"> {{element.skills}} </td>
         </ng-container>
 
