--- a/src/app/customer-list/customer-list.component.html
+++ b/src/app/customer-list/customer-list.component.html
@@ -7,6 +7,7 @@
                 <mat-option value="IT">IT</mat-option>
                 <mat-option value="Network">Network</mat-option>
                 <mat-option value="Hardware">Hardware</mat-option>
+              <mat-option value="Other">Other</mat-option>
             </mat-select>
         </mat-form-field>
     </div>
@@ -64,7 +65,7 @@
         </ng-container>
 
         <ng-container matColumnDef="skills">
-            <th mat-header-cell *matHeaderCellDef> Skills 3</th>
+            <th mat-header-cell *matHeaderCellDef> Skills </th>
             <td mat-cell *matCellDef="let element"> {{element.skills}} </td>
         </ng-container>
 
