--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,4 +4,5 @@
         <mat-grid-tile><img src="../../assets/avacado.webp"><button class="btn btn-dark btn-lg position-absolute" routerLink="/customer-list">Order</button></mat-grid-tile>
         <mat-grid-tile><img src="../../assets/bowl.webp"><button class="btn btn-dark btn-lg position-absolute" >Order</button></mat-grid-tile>
       </mat-grid-list>
+    <h2>Hello</h2>
   </div>
